--- a/src/style.css
+++ b/src/style.css
@@ -128,7 +128,7 @@ ul li {
 }
 .info img {
   width: 10rem;
-  height: auto;
+  height: 6rem;
   border: 1px solid black;
 }
 .info a {
@@ -145,8 +145,7 @@ ul li {
 @media (min-width: 37.5em) {
   .info img {
     width: 20rem;
-    height: auto;
-    max-height: 30rem;
+    height: 11rem;
   }
   .info a {
     padding: 2rem;
