--- a/src/style.css
+++ b/src/style.css
@@ -173,6 +173,7 @@ footer {
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
+  margin-top: 15rem;
 }
 footer span {
   padding: 0 0.5rem;
